--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -229,7 +229,8 @@ else if (alignment == 'blastn')
  }
 
 
-function handle_results (html,w, h, img_base, n_images) {
+function handle_results (html,w, h, img_base, n_images,message) {
+ alert_message(message);
  $('#results').html(html);
  checkViewer();
  var so = new SWFObject("/CoGe/gobe/flash/gobe.swf", "gobe", w, h, "9", "#FFFFFF");
@@ -250,7 +251,7 @@ if (num_seqs < 3){
 //$('#new_seq_submission').remove();
 $('#refseq'+num_seqs).remove();
 $('#seq_set'+num_seqs).remove();
-$('#new_seq_submission').html('');
+//$('#new_seq_submission').html('');
 num_seqs--;
 $('#num_seqs').val(num_seqs);
 gen_go_button(['num_seqs'],['go_button']);
@@ -283,7 +284,7 @@ function seq_submit_change (seq_num) {
 
 function process_add_seq (newseq, num_seqs, go, refseq, colors, message)
 {
- $('#new_seq_submission').html(newseq);
+ $('#new_seq_submission').append(newseq);
  seq_submit_change(num_seqs);
  $('#num_seqs').val(num_seqs);
  $('#go_button').html(go);
@@ -321,8 +322,13 @@ function process_add_seq (newseq, num_seqs, go, refseq, colors, message)
   <TH colspan="<TMPL_VAR NAME="NUM_SEQS">" align=left>
    <DIV id="seq_submission" class="topItem"  onMouseOver="changeColor('seq_submission','#000099'); " onMouseOut="changeColor('seq_submission','#009900');" onClick='animate_section("#seq_submission_menu","slideToggle")' >Sequence Submission:</DIV>
    <DIV class="dropMenu" id="seq_submission_menu">
-     <TMPL_VAR NAME="SEQ_SUB">		
-  <Div class ="small" align = "left">Apply distance to all CoGe submissions?<input type="checkbox" name="apply_all" id="apply_all" value="0" /></div>
+    <table width="100%">
+     <tr id = "new_seq_submission" valign="top">
+     <TMPL_VAR NAME="SEQ_SUB">
+    </div>
+    </table>
+
+     <Div class ="small" align = "left">Apply distance to all CoGe submissions?<input type="checkbox" name="apply_all" id="apply_all" value="0" /></div>
   </DIV>
  </TR>
 </TABLE>
@@ -810,16 +816,16 @@ function process_add_seq (newseq, num_seqs, go, refseq, colors, message)
 
 
 <TMPL_IF NAME="SEQ_SELECT">
-<TABLE style="width: 100%;">
-<tr valign="top">
 <TMPL_LOOP NAME="SEQ_SELECT_LOOP">
-<td id ="seq_set<TMPL_VAR NAME="SEQ_NUM">">Sequence <TMPL_VAR NAME="SEQ_NUM">: 
+<th align=left id ="seq_set<TMPL_VAR NAME="SEQ_NUM">">Sequence <TMPL_VAR NAME="SEQ_NUM">: 
+
 <select class="backbox" id="seq_submit<TMPL_VAR NAME="SEQ_NUM">" size="1" onchange='seq_submit_change(<TMPL_VAR NAME="SEQ_NUM">)'>
 <option value="db<TMPL_VAR NAME="SEQ_NUM">">CoGe Database</option>
 <option value="gb<TMPL_VAR NAME="SEQ_NUM">">NCBI GenBank</option>
 <option value="dir<TMPL_VAR NAME="SEQ_NUM">">Direct Submission</option>
-</select>       
-<DIV id="db<TMPL_VAR NAME="SEQ_NUM">" class="seq_submission_type<TMPL_VAR NAME="SEQ_NUM"> seq_submission_type">
+</select>
+
+<DIV style="float: left" id="db<TMPL_VAR NAME="SEQ_NUM">" class="seq_submission_type<TMPL_VAR NAME="SEQ_NUM"> seq_submission_type">
 <TABLE style="width: 100%;" class="small">
        <TR valign="top">
         <TD>Name:
@@ -869,11 +875,9 @@ function process_add_seq (newseq, num_seqs, go, refseq, colors, message)
      <font class="small">Reverse Complement: <label><input class="backbox" type="radio" name="dirrev<TMPL_VAR NAME="SEQ_NUM">" id="dirrev<TMPL_VAR NAME="SEQ_NUM">" tabindex="1" value="1" />Yes</label><label><input class="backbox" type="radio" name="dirrev<TMPL_VAR NAME="SEQ_NUM">" id="dirrev<TMPL_VAR NAME="SEQ_NUM">" tabindex="1" value="0" checked />No</label><BR></font><br>
 </table>
 </DIV>
+</th>
+
 </TMPL_LOOP>
-</div>
-<td>
-<DIV id="new_seq_submission"></DIV>
-</table>
 </TMPL_IF>
 
 
@@ -894,6 +898,7 @@ function process_add_seq (newseq, num_seqs, go, refseq, colors, message)
    <TD class="small" nowrap>
      B:<input class="backbox" type="text" name="b<TMPL_VAR NAME="HSP_NUM">" id="b<TMPL_VAR NAME="HSP_NUM">" tabindex="1"  size="3" value="<TMPL_VAR NAME="BLUE">" />
   </table>
+  </th>
  </TMPL_LOOP>
   </table>
 </TMPL_IF>
