update page text

--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -360,7 +360,7 @@ function process_add_seq (newseq, num_seqs, go_run, refseq, colors, message)
       <TD>
   <TABLE class=small>
   <TR>
-  <Th>Sequence and Algorithm Options: </TD>
+  <Th>Alignment Algorithm: </TD>
   <TD>
   <select class="backbox" id="alignment_program" size="1" onchange='check_alignment_program()'>
        <TMPL_VAR NAME=ALIGNMENT_PROGRAMS>
