--- a/web/tmpl/GEvo.tmpl
+++ b/web/tmpl/GEvo.tmpl
@@ -460,7 +460,7 @@ function monitor_log(log)
   </TD>
  </TR>    
  <TR>
-  <TD>Expectation value (E) (-e): </TD>
+  <TD>Expectation value (-e): </TD>
   <TD><input class="backbox" type="text" name="blast_eval" id="blast_eval" tabindex="1" size="3" value="100" /></TD>
  </TR>
  <TR>
